--- a/board.html
+++ b/board.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board | Join</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/board.css">
     <link rel="stylesheet" href="css/header.css"/>
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
@@ -19,6 +20,62 @@
     <div w3-include-html="assets/templates/header.html"></div>
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
+
+    <div class="body">
+        <div class="head-section">
+            <div class="headline-h1">
+                <h1>Board</h1>
+            </div>
+            <div class="head-section-right">
+                <div class="input-section">
+                    <input type="text" placeholder="Find Task">
+                    <img class="input-line" src="assets/image/board/input-line.svg" alt="Line">
+                    <img class="input-search" src="assets/image/board/search.svg" alt="Search Icon">
+                </div>
+
+                <button class="add-task" href="#">
+                    <span>Add task</span>
+                    <img src="assets/image/board/add.svg" alt="Plus Icon">
+                </button>
+            </div>
+        </div>
+
+        <div class="task-board">
+            <div class="task-section">
+                <span>To do</span>
+                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+            </div>
+            <div class="task-section">
+                <span>In progress</span>
+                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+            </div>
+            <div class="task-section">
+                <span>Await feedback</span>
+                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+            </div>
+            <div class="task-section">
+                <span>Done</span>
+                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+            </div>
+        </div>
+
+        <div class="task-area">
+            <div class="creat-task-area">
+
+            </div>
+            <div class="creat-task-area">
+
+            </div>
+            <div class="creat-task-area">
+
+            </div>
+            <div class="creat-task-area">
+
+            </div>
+        </div>
+
+
+    </div>
     
 </body>
 </html>
