--- a/summary.html
+++ b/summary.html
@@ -15,10 +15,7 @@
     <body onload="includeHTML(0), greetUser()">
         <div w3-include-html="assets/templates/header.html"></div>
 
-        <div
-            class="sidebar"
-            w3-include-html="assets/templates/sidebar.html"
-        ></div>
+        <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
         <script src="script.js"></script>
         <script src="./js/summary.js"></script>
