--- a/add_task.html
+++ b/add_task.html
@@ -14,8 +14,9 @@
 
 </head>
 
-<body onload="includeHTML(1)">
+<body onload="includeHTML(1);includeAddContactHTML()">
     <div w3-include-html="./assets/templates/header.html"></div>
+    <div include-html="./assets/templates/add_contact.html"></div>
     <div class="sidebar" w3-include-html="./assets/templates/sidebar.html"></div>
 
     <form onsubmit="return false;" id="addTaskContainer">
