--- a/reset.password.html
+++ b/reset.password.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 
-<body>
+<body onload="init(); onPageLoad()">
     <img src="./assets/image/join-logo.svg" class="logo" id="logo">
     <form id="reset-form" class="animation" onsubmit="onSubmit(event)">
         <img onclick="window.location.href='index.html'" class="reset-password-arrow arrow"
