finished reset password

--- a/reset.password.html
+++ b/reset.password.html
@@ -27,10 +27,7 @@
         <input id="reset-password-input2" class="reset-password-input" type="password" placeholder="Confirm password">
         <button type="submit" class="reset-password-btn">Continue</button>
     </form>
-    <div id="reset-password-message" class="d-none">
-        <div class="reset-password-message">
-            <span class="reset-password-message-text">You reset your password</span>
-        </div>
+    <div id="reset-password-message">
     </div>
 
 
