updated contacts page

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,17 @@
             </button>
             <div id="userList" class="user-list"></div>
         </div>
+        <div class="selected-contact-container">
+            <div class="selected-contact-header">
+                <h1>Contacts</h1><div class="horizontal-blue-line"></div><h4>Better with a team</h4>
+            </div>
+
+            <div class="selected-contact-body" id="selectedContactBody">
+            </div>
+
+
+
+        </div>
     </div>
 
 
