updated contact page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <div class="contacts-container">
         <div class="contact-list">
-            <button type="button" class="default-button contact-button" onclick="includeAddContactHTML()">
+            <button type="button" class="default-button contact-button" onclick="includeContactHTML('addContact')">
                 Add new contact
                 <img src='./assets/icons/person-add.svg'>
             </button>
