--- a/board.html
+++ b/board.html
@@ -61,6 +61,28 @@
 
         <div class="task-area">
             <div class="creat-task-area">
+                <div class="task-card">
+                    <div class="card-category">User Story</div>
+                    <div>
+                        <h4>Kochwelt Page & Recipe Recommender</h4>
+                        <div class="card-description">Build start page with recipe recommendation...</div>
+                    </div>
+                    <div class="progress-bar-section">
+                        <div class="progress-bar">
+                            <div class="progress"></div>
+                        </div>
+                        <div class="progress-bar-subtasks">1/2 Subtasks</div>
+                    </div>
+                    <div class="task-card-bottom-section">
+                        <div class="task-card-users">
+                            <div class="circle-1">AM</div>
+                            <div class="circle-2">AM</div>
+                            <div class="circle-3">AM</div>
+                        </div>
+                        <img src="assets/icons/prio-medium.svg" alt="Prio Medium">
+                    </div>
+
+                </div>
 
             </div>
             <div class="creat-task-area">
