--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 Add new contact
                 <img src='./assets/icons/person-add.svg'>
             </button>
-            <div id="userList" class="user-list"></div>
+            <div id="userList" class="user-list scrollable"></div>
         </div>
         <div class="selected-contact-container">
             <div class="selected-contact-header">
