--- a/board.html
+++ b/board.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/board.css">
     <link rel="stylesheet" href="css/header.css"/>
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
     <script src="script.js"></script>
     <script src=".js/summary.js"></script>
@@ -20,6 +21,7 @@
     <div w3-include-html="assets/templates/header.html"></div>
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
+    <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
 
     <div class="body">
         <div class="head-section">
