--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
 
@@ -16,6 +17,7 @@
 <body onload="includeHTML(3);initContacts()" id="body">
     <div include-html="./assets/templates/add_contact.html"></div>
     <div w3-include-html="assets/templates/header.html"></div>
+    <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
     <div class="contacts-container">
