--- a/add_task.html
+++ b/add_task.html
@@ -7,6 +7,7 @@
     <title>Add Task | Join</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -20,6 +21,7 @@
     
     <div include-html="./assets/templates/add_contact.html"></div>
     <div w3-include-html="./assets/templates/header.html"></div>
+    <div w3-include-html="assets/templates/header_responsive.html"></div>
     <div class="sidebar" w3-include-html="./assets/templates/sidebar.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
 
