--- a/board.html
+++ b/board.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/board.css">
     <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
@@ -19,6 +20,7 @@
 <body onload="includeHTML(2)">
 
     <div w3-include-html="assets/templates/header.html"></div>
+    <div w3-include-html="assets/templates/header_responsive.html"></div>
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
