--- a/help.html
+++ b/help.html
@@ -7,6 +7,7 @@
     <title>Help | Join</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/help.css">
@@ -19,6 +20,7 @@
 <body onload="includeHTML()">
 
     <div w3-include-html="assets/templates/header.html"></div>
+    <div w3-include-html="assets/templates/header_responsive.html"></div>
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
     <div class="help-container">
