--- a/legal-notice.html
+++ b/legal-notice.html
@@ -7,7 +7,9 @@
     <title>Legal Notice | Join</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/privacy_policy.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
@@ -19,8 +21,10 @@
 <body onload="includeHTML(5)">
 
     <div w3-include-html="assets/templates/header.html"></div>
+    <div w3-include-html="assets/templates/header_responsive.html"></div>
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
+    <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
 
     <div class='privacy-policy-container'>
         <img onclick="goBack()" id="goBack" src="assets/image/sidebar/arrow-left-line.svg" >
