--- a/summary.html
+++ b/summary.html
@@ -6,6 +6,7 @@
         <title>Summary | Join</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/header.css"/>
+        <link rel="stylesheet" href="css/header-responsive.css">
         <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/sidebar-responsive.css">
         <link rel="stylesheet" href="css/summary.css">
@@ -15,6 +16,7 @@
 
     <body onload="includeHTML(0); greetUser()">
         <div w3-include-html="assets/templates/header.html"></div>
+        <div w3-include-html="assets/templates/header_responsive.html"></div>
 
         <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
         <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
