--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Join</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/contact.css">
@@ -17,6 +18,7 @@
 <body onload="includeHTML(3);initContacts()" id="body">
     <div include-html="./assets/templates/add_contact.html"></div>
     <div w3-include-html="assets/templates/header.html"></div>
+    <div w3-include-html="assets/templates/header_responsive.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
