legal notice updated

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                 <span class="forgot-password-message-text">An E-Mail has been sent to you</span>
             </div>
         </div>
-        <div class="privacy-policy-container"><a href="privacy-policy.html">Privacy Policy</a><a href="legal-notice.html">Legal notice</a></div>
+        <div class="privacy-policy-container"><a href="legal-notice.html">Privacy Policy</a><a href="legal-notice.html">Legal notice</a></div>
     </div>
-
 
     <script src="script.js"></script>
     <script src="./js/storage.js"></script>
