--- a/help.html
+++ b/help.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="css/header.css"/>
     <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/help.css">
+    <link rel="stylesheet" href="css/legal_notice.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
     <script src="script.js"></script>
-    <script src="summary.js"></script>
-    <script src="./js/add_task.js"></script>
 </head>
 
 <body onload="includeHTML()">
@@ -23,7 +22,9 @@
     <div w3-include-html="assets/templates/header_responsive.html"></div>
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
-    <div class="help-container">
+    <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
+
+    <div class="privacy-policy-container">
         <h1 class="break">Help</h1>
 
         <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll
@@ -100,7 +101,7 @@
                     Have more questions about <a class="join">Join</a>? Feel free to contact us at [Your Contact
                     Email]. We're here to help you!</span></span>
         </div>
-        <h2>Enjoy using Join!</h2>
+        <h2 class="help-end">Enjoy using Join!</h2>
     </div>
 
 
