--- a/contact.html
+++ b/contact.html
@@ -23,16 +23,20 @@
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
     <div class="contacts-container">
-        <div class="contact-list">
+        <div class="contact-list-container" id="contactListSection">
             <button type="button" class="default-button contact-button" onclick="includeContactHTML('addContact')">
                 Add new contact
                 <img src='./assets/icons/person-add.svg'>
             </button>
+            <button type="button" class="default-button contact-button-mobile" onclick="includeContactHTML('addContact')">
+                <img src='./assets/icons/person-add.svg'>
+            </button>
             <div id="contactList" class="user-list scrollable"></div>
         </div>
-        <div class="selected-contact-container">
+        <div class="selected-contact-container" id="selectedContactContainer">
             <div class="selected-contact-header">
-                <h1>Contacts</h1><div class="horizontal-blue-line"></div><h4>Better with a team</h4>
+                <h1>Contacts</h1><div class="horizontal-blue-line"></div><h4>Better with a team</h4><div class="vertical-blue-line"></div>
+                <img onclick="unsetSelectedContact()" id="goBack" src="assets/image/sidebar/arrow-left-line.svg">
             </div>
 
             <div class="selected-contact-body" id="selectedContactBody">
