--- a/summary.html
+++ b/summary.html
@@ -108,7 +108,7 @@
 
                 <div class="greet-section">
                     <div class="greeting">
-                        <span id="greeting-time" class="greeting-time">Good morning,</span>
+                        <span id="greeting-time">Good morning,</span>
                         <h1 id="greeting-name" class="blue-text">Sofia Müller</h1>
                     </div>
                 </div>
@@ -116,32 +116,3 @@
         </div>
     </body>
 </html>
-
-
-
-
-
-
-
-
-<!-- <div class="summery-container">
-    <a class="task-bottom box-left" href="#">
-        <div class="summary-field">
-            <img src="assets/image/Summary/to-do.svg" alt="">
-            <div>
-                <h2>1</h2>
-                <div class="font-16">To-do</div>
-            </div>
-        </div>
-    </a>
-    <a class="task-bottom box-right" href="#">
-        <div class="summary-field">
-            <img src="assets/image/Summary/done.svg" alt="">
-            <div>
-                <h2>1</h2>
-                <div class="font-16">Done</div>
-            </div>
-        </div>
-    </a>
-</div>
-</div> -->
