--- a/board.html
+++ b/board.html
@@ -47,15 +47,15 @@
         <div class="task-board">
             <div class="task-section">
                 <span>To do</span>
-                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+                <img class="plus-icon" src="assets/image/board/plus button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>In progress</span>
-                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+                <img class="plus-icon" src="assets/image/board/plus button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Await feedback</span>
-                <img src="assets/image/board/plus button.svg" alt="Plus Icon">
+                <img class="plus-icon" src="assets/image/board/plus button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Done</span>
